improve update status room